tests/ui/type-alias-impl-trait/ice-assoc-const-binding-issue-148124.stderr
error: unconstrained opaque type
  --> $DIR/ice-assoc-const-binding-issue-148124.rs:10:16
   |
LL | type Foo<'a> = impl Trait<&'a str, K = { () }>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same crate

error: aborting due to 1 previous error

